feat: adding font style in SCSS code

--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <!-- Title of the page -->
     <title>Credit card details</title>
 
+    <!-- Font linking -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@500&display=swap"
+      rel="stylesheet"
+    />
+
     <!-- JS & CSS links -->
     <link rel="stylesheet" href="./CSS/styles.css" />
     <script defer src="./JS/index.js"></script>
