feat: adding confirmation button

--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
               <label for="cvc-num">CVC</label>
               <input type="text" id="cvc-num" placeholder="e.g. 123" />
             </div>
+
+            <!-- Confirming button -->
+            <button>Confirm</button>
           </div>
         </form>
       </div>
