feat: editing the card images

--- a/index.html
+++ b/index.html
@@ -24,9 +24,36 @@
     <div class="container">
       <!-- The card place -->
       <div class="card-shape">
-        <!-- The card front & back -->
-        <div class="card-front"></div>
-        <div class="card-back"></div>
+        <!-- The card front -->
+        <div class="card-front">
+          <!-- Card logo -->
+          <div class="card-logo">
+            <img src="./images/card-logo.svg" alt="card-logo" />
+          </div>
+
+          <!-- Card number -->
+          <div class="card-number">
+            <p>0000</p>
+            <p>0000</p>
+            <p>0000</p>
+            <p>0000</p>
+          </div>
+
+          <!-- Card name holder and expire date -->
+          <div class="card-name-exp">
+            <p>JANE APPLESSED</p>
+
+            <p>00/00</p>
+          </div>
+        </div>
+
+        <!-- The card front -->
+        <div class="card-back">
+          <!-- Card CVC -->
+          <div class="cvc">
+            <p>000</p>
+          </div>
+        </div>
       </div>
 
       <!-- Card details -->
@@ -43,7 +70,7 @@
           </div>
 
           <!-- card number -->
-          <div class="cardnumber-holder">
+          <div class="cardnumber-details">
             <label for="card-num">CARD NUMBER</label>
             <input
               type="text"
